# Anti-spoofing-System

./: .gitignore  README.md  human.m4a  main.py  pyproject.toml  railway.json  spoof_detection.py
api/: .env.example  main.py  requirements.txt  spoof_detection.py
api/configs/: exceptions.py
