[project]
name = "spoof-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchcontrib>=0.0.2",
    "uvicorn>=0.40.0",
]
